# isim

./: .gitignore  CMakeLists.txt  README.md
src/: BS_thread_pool.hh  Camera.cc  Camera.hh  Engine.cc  Mat4x4.cc  Mat4x4.hh  Object3D.cc  Object3D.hh  Pipeline.cc  Pipeline.hh  Triangle.cc  Triangle.hh  Utils.hh  Vector2.cc  Vector2.hh  Vector3.cc  Vector3.hh  Vector4.cc  Vector4.hh  Vertex.cc  Vertex.hh
